grammar.js
    program: ($) =>
      prec(
        PREC.PROGRAM,
        seq(
          optional($.shebang),
          any_amount_of(
            choice(
              $._statement,
              $._documentation_brief_container,
              $.documentation_command,
              $._documentation_tag_container,
              $._documentation_config_container,
              $.documentation_class,
            ),
          ),
          optional(alias($.return_statement, $.module_return_statement)),
          optional("\0"),
        ),
      ),

    string: ($) =>
      seq(
        field("start", alias($._string_start, "string_start")),
        field("content", optional(alias($._string_content, "string_content"))),
        field("end", alias($._string_end, "string_end")),
      ),

    _statement: ($) =>
      prec.right(
        PREC.STATEMENT,
        seq(
          choice(
            $.assignment,
            $._declaration,
            $.function_call,
            $.do_statement,
            $.while_statement,
            $.repeat_statement,
            $.if_statement,
            $.for_statement,
            // $.comment
          ),
          optional(";"),
        ),
      ),

    _expression: ($) =>
      prec.left(
        choice(
          $.nil,
          $.boolean,
          $.number,
          $.string,
          $.ellipsis,
          $.function,
          $.prefix_exp,
          $.tableconstructor,
          $.binary_operation,
          $.unary_operation,
        ),
      ),

    // Primitives {{{
    boolean: (_) => choice("true", "false"),

    number: ($) => {
      const decimal_digits = /[0-9]+/;
      const signed_integer = seq(optional(choice("-", "+")), decimal_digits);
      const decimal_exponent_part = seq(choice("e", "E"), signed_integer);

      const decimal_integer_literal = choice(
        "0",
        seq(optional("0"), /[1-9]/, optional(decimal_digits)),
      );

      const hex_digits = /[a-fA-F0-9]+/;
      const hex_exponent_part = seq(choice("p", "P"), signed_integer);

      const decimal_literal = choice(
        seq(
          decimal_integer_literal,
          ".",
          optional(decimal_digits),
          optional(decimal_exponent_part),
        ),
        seq(".", decimal_digits, optional(decimal_exponent_part)),
        seq(decimal_integer_literal, optional(decimal_exponent_part)),
      );

      const hex_literal = seq(
        choice("0x", "0X"),
        hex_digits,
        optional(seq(".", hex_digits)),
        optional(hex_exponent_part),
      );

      return token(choice(decimal_literal, hex_literal));
    },

    ellipsis: (_) => "...",

    function_name: ($) =>
      seq(
        list_of($.identifier, alias(".", $.table_dot), false),
        optional(seq(alias(":", $.table_colon), $.identifier)),
      ),

    function: ($) => seq($.function_start, $.function_impl),

    parameter_list: ($) =>
      choice(
        seq(
          prec.left(PREC.COMMA, list_of($.identifier, /,\s*/, false)),
          optional(seq(/,\s*/, $.ellipsis)),
        ),
        $.ellipsis,
      ),
    // }}}

    binary_operation: ($) =>
      choice(
        ...[
          ["or", PREC.OR],
          ["and", PREC.AND],
          ["<", PREC.COMPARE],
          ["<=", PREC.COMPARE],
          ["==", PREC.COMPARE],
          ["~=", PREC.COMPARE],
          [">=", PREC.COMPARE],
          [">", PREC.COMPARE],
          ["|", PREC.BIT_OR],
          ["~", PREC.BIT_NOT],
          ["&", PREC.BIT_AND],
          ["<<", PREC.SHIFT],
          [">>", PREC.SHIFT],
          ["+", PREC.PLUS],
          ["-", PREC.PLUS],
          ["*", PREC.MULTI],
          ["/", PREC.MULTI],
          ["//", PREC.MULTI],
          ["%", PREC.MULTI],
        ].map(([operator, precedence]) =>
          prec.left(precedence, seq($._expression, operator, $._expression)),
        ),
        ...[
          ["..", PREC.CONCAT],
          ["^", PREC.POWER],
        ].map(([operator, precedence]) =>
          prec.right(precedence, seq($._expression, operator, $._expression)),
        ),
      ),

    local: (_) => "local",

    variable_declaration: ($) =>
      seq(
        optional(field("documentation", $.lua_documentation)),
        $.local,
        list_of(field("name", $.variable_declarator), ",", false),
        optional(
          seq("=", list_of(field("value", $._expression), ",", false)),
        ),
      ),

    variable_declarator: ($) => $._var,

    // var ::=  identifier | prefixexp `[´ exp `]´ | prefixexp `.´ identifier
    _var: ($) =>
      prec(
        PREC.PRIORITY,
        choice(
          $.identifier,
          seq($.prefix_exp, "[", $._expression, "]"),
          seq($.prefix_exp, ".", $.identifier),
        ),
      ),

    return_statement: ($) =>
      prec(PREC.PRIORITY, seq("return", optional(list_of($._expression, ",")))),

    function_start: () => "function",


    // }}}

    // Table {{{
    tableconstructor: ($) => seq("{", optional($.fieldlist), "}"),

    fieldlist: ($) =>
      prec(PREC.COMMA, list_of($.field, $.field_separator, true)),

    field: ($) => $._field_expression,

    // `[´ exp `]´ `=´ exp | identifier `=´ exp | exp
    _field_expression: ($) =>
      choice(
        $._expression_field_expression,
        $._named_field_expression,
        field("value", $._expression),
      ),

    function_call: ($) =>
      prec.right(
        PREC.FUNCTION,
        seq(field("prefix", $.prefix_exp), choice($._args, $._self_call)),
      ),

    _args: ($) => choice($._parentheses_call, $._table_call, $._string_call),

    _self_call: ($) =>
      seq(alias(":", $.self_call_colon), $.identifier, $._args),

    function_arguments: ($) =>
      seq($._expression, optional(repeat(seq(",", $._expression)))),

    // }}}

    _identifier: (_) => /[a-zA-Z_][a-zA-Z0-9_]*/,
    identifier: ($) => $._identifier,

    // Dummy Fields {{{
    _documentation_tag_container: ($) =>
      prec.right(PREC.PROGRAM, seq(/\s*---@tag\s+/, $.documentation_tag)),

    documentation_config: ($) => $._expression,
    _documentation_config_container: ($) =>
      prec.right(PREC.PROGRAM, seq(/\s*---@config\s+/, $.documentation_config)),

    documentation_brief: () => /[^\n]*/,
    _documentation_brief_container: ($) =>
      prec.right(
        PREC.PROGRAM,
        seq(
          /@brief \[\[/,
          any_amount_of(/\s*---/, $.documentation_brief),
          /@brief \]\]/,
        ),
      ),

    documentation_command_content: ($) => /[^\n\[]*/,
    documentation_command: ($) =>
      prec.right(
        PREC.PROGRAM,
        seq(
          /@command/,
          field(
            "usage",
            alias($.documentation_command_content, $.documentation_usage),
          ),
          /\[\[/,
          repeat1(
            seq(
              /\s*---/,
              field("documentation", $.documentation_command_content),
            ),
          ),
          /@command \]\]/,
        ),
      ),

    _doc_type: ($) =>
      prec.right(
        choice(
          $.doc_type_builtin,
          $.doc_identifier,
          alias($.string, $.doc_literal),
          $.doc_type_union,
          $.doc_type_optional,
          $._doc_type_paren,
          $.doc_type_array,
          $.doc_type_key_value,
          $.doc_type_table_literal,
          $.doc_type_function,
        ),
      ),

    doc_identifier: ($) =>
      prec(PREC.PRIORITY, list_of($._identifier, ".", false)),

    doc_type_array: ($) =>
      prec.right(PREC.PRIORITY, seq(field("type", $._doc_type), "[]")),

    doc_type_key_value: ($) =>
      seq(
        "table<",
        field("key", $._doc_type),
        ",",
        field("value", $._doc_type),
        ">",
      ),

    doc_class: ($) =>
      prec.left(
        seq(
          /@class\s+/,
          field("type", $._doc_type),
          optional(seq(/\s*:\s*/, field("parent", $._doc_type))),
          optional(seq(/\s*@\s*/, field("description", $.class_description))),
          /\n\s*/,
        ),
      ),

    documentation_class: ($) =>
      prec.right(PREC.PROGRAM, seq($.doc_class, any_amount_of($.doc_field))),

    // Definition:
    // ---@param <name[?]> <type[|type...]> [description]
    doc_parameter: ($) =>
      prec.right(
        PREC.PRIORITY,
        seq(
          /@param\s+/,
          field(
            "name",
            choice(
              seq($.identifier, field("nullable", optional("?"))),
              $.ellipsis,
            ),
          ),
          field("type", $._doc_type),
          optional(
            seq(/\s*:?\s*/, field("description", $.parameter_description)),
          ),
          /\n\s*/,
        ),
      ),

    // Definition:
    // ---@field [public|protected|private] field_name MY_TYPE[|other_type] [@comment]
    //
    // I don't think [public|protected|private] is useful for us.
    //
    // ---@field example table hello
    // ---@field example (table): hello
    doc_field: ($) =>
      seq(
        /@field\s+/,
        optional(seq(field("visibility", $.doc_visibility), /\s+/)),
        field("name", $.identifier),
        optional("?"),
        /\s+/,
        field("type", $._doc_type),

        // TODO: How closely should we be to emmy...
        optional(seq(/\s*:\s*/, field("description", $.field_description))),
        /\n\s*/,
      ),

    doc_visibility: () => choice("public", "protected", "private"),

    _multiline_doc_string: ($) =>
      prec.right(
        PREC.PRIORITY,
        seq(/[^\n]+/, any_amount_of(/\s*---[^\n]*/)),
        // seq(/[^\n]*/, any_amount_of(/\n\s*---[^\n]*/))
      ),

    class_description: ($) => $._multiline_doc_string,
    field_description: ($) => $._multiline_doc_string,

    // TODO(conni2461): Pretty sure that doesn't work as expected
    parameter_description: ($) => $._multiline_doc_string,

    // doc_return_description: ($) => $._multiline_doc_string,
    doc_return_description: ($) => token(prec.right(seq(/[^\r\n]+/, /\r\n/))),

    // ---@return <type> [<name> [comment] | [name] #<comment>]
    doc_return: ($) =>
      prec.right(
        seq(
          "@return",
          field("type", $._doc_type),
          optional(
            choice(
              seq(
                field("name", $.identifier),
                optional(
                  field("description", $.doc_return_description),
                ),
              ),
              seq(
                choice(/\s*:\s*/, /\s*#\s*/),
                field("description", $.doc_return_description),
              ),
            ),
          ),
        ),
      ),

    doc_eval: ($) => $._expression,
    _doc_eval_container: ($) => seq(/@eval\s+/, $.doc_eval),

    doc_todo: (_) => seq(/@todo.+/, /[^\n]*/),
    lua_documentation: ($) =>
      one_or_more(
        seq(
          "---",
          choice(
            $.doc_comment,
            $.doc_ignore,
            $._doc_eval_container,
            $.doc_class,
            $.doc_parameter,
            $.doc_field,
            $.doc_typedecl,
            $.doc_note,
            $.doc_see,
            $.doc_todo,
            $.doc_usage,
            $.doc_varargs,
            $.doc_return,
          ),
        ),
      ),
    // }}}

    // Comments {{{
    // comment: ($) => choice(seq("--", /[^-].*\r?\n/), $._multi_comment),
    comment: ($) =>
      choice(
        seq(
          field("start", alias("--", "comment_start")),
          field("content", alias(/[^\r\n]*/, "comment_content")),
        ),
        seq(
          field("start", alias($._block_comment_start, "comment_start")),
          field(
            "content",
            optional(alias($._block_comment_content, "comment_content")),
          ),
          field("end", alias($._block_comment_end, "comment_end")),
        ),
      ),
    // }}}
  },
});

function any_amount_of() {
  return repeat(seq(...arguments));
}

function one_or_more() {
  return repeat1(seq(...arguments));
}

function list_of(match, sep, trailing) {
  return trailing
    ? seq(match, any_amount_of(sep, match), optional(sep))
    : seq(match, any_amount_of(sep, match));
}

/*
